# ntust-embedded-car

./: .gitignore  README.md
carNN/: car.ipynb  data_import.ipynb  main.ipynb  test_y_train50x50.npz  y_train50x50.npz
driver/: .clang-format  .main.cpp.swp  CMakeLists.txt  bsp.h  build.sh  main.cpp
driver/core/: communication.cpp  communication.h  ir.cpp  ir.h  model.cpp  model.h  motor.cpp  motor.h  pictureIO.cpp  pictureIO.h  raw_data_processing.cpp  raw_data_processing.h  servo.cpp  servo.h  sign_flag.cpp  sign_flag.h  ultrasonic.cpp  ultrasonic.h  vision.cpp  vision.h
image_process/: img_preparation.ipynb
image_process/.ipynb_checkpoints/: img_preparation-checkpoint.ipynb
image_process/CppLenfVersion/: CMakeLists.txt  main.cpp
image_process/CppLenfVersion/core/: communication.cpp  communication.h  pictureIO.cpp  pictureIO.h  vision.cpp  vision.h
